2004-09-03  Michael Natterer  <mitch@gimp.org>
	* libgimp/libgimp-sections.txt: added gimp_check_size() and
	gimp_check_type().

	* libgimp/tmpl/gimp.sgml: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14608 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-03  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt: added gimp_check_size() and
+	gimp_check_type().
+
+	* libgimp/tmpl/gimp.sgml: regenerated.
+
 2004-09-03  Sven Neumann  <sven@gimp.org>
 
 	* libgimpbase/libgimpbase-docs.sgml
