2004-09-03  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreviewarea.c (CHECK_COLOR): swapped light
	and gray checks to get a checkerboard that matches the image window.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14609 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-03  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimppreviewarea.c (CHECK_COLOR): swapped light
+	and gray checks to get a checkerboard that matches the image window.
+
 2004-09-03  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpbase/gimpprotocol.h (struct _GPConfig): replaced the
