2004-09-03  Simon Budig  <simon@gimp.org>
	* app/gui/info-window.c: Applied modified patch by Kevin Cozens
	that implements a "Comments" tab in the image info dialog.

	Fixes bug #151719.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14611 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-03  Simon Budig  <simon@gimp.org>
+
+	* app/gui/info-window.c: Applied modified patch by Kevin Cozens
+	that implements a "Comments" tab in the image info dialog.
+
+	Fixes bug #151719.
+
 2004-09-03  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimppreviewarea.c (CHECK_COLOR): swapped light
