2004-09-03  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpdevicestatus.c: removed "Configure input
	devices" button. Fixes bug #150177.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14612 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-03  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpdevicestatus.c: removed "Configure input
+	devices" button. Fixes bug #150177.
+
 2004-09-03  Simon Budig  <simon@gimp.org>
 
 	* app/gui/info-window.c: Applied modified patch by Kevin Cozens
