2004-09-03  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_set_drawable):
	take care of setting the colormap for indexed drawables.

	* libgimpwidgets/gimppreview.c (gimp_preview_area_event): pan with
	the first mouse button only. We will need the other buttons.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14616 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-09-03  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_set_drawable):
+	take care of setting the colormap for indexed drawables.
+
+	* libgimpwidgets/gimppreview.c (gimp_preview_area_event): pan with
+	the first mouse button only. We will need the other buttons.
+
+2004-09-03  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/grid.c: ported to GimpDrawablePreview.
 
 2004-09-03  Sven Neumann  <sven@gimp.org>
