2004-09-03  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreviewarea.[ch]: added
	gimp_preview_area_menu_popup(). Not completely finished yet...

	* libgimpwidgets/gimppreview.c: use the new function.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14617 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-09-03  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimppreviewarea.[ch]: added
+	gimp_preview_area_menu_popup(). Not completely finished yet...
+
+	* libgimpwidgets/gimppreview.c: use the new function.
+
+2004-09-03  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_set_drawable):
 	take care of setting the colormap for indexed drawables.
 
