* plug-ins/common/sharpen.c: ported to GimpDrawablePreview.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14618 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-04  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/sharpen.c: ported to GimpDrawablePreview.
+
 2004-09-03  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimppreviewarea.[ch]: added
