2004-09-04  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreviewarea.[ch]: pass a GdkEventButton to
	gimp_preview_area_menu_popup().

	* libgimpwidgets/gimppreview.c: implement GtkWidget::popup_menu().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14621 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-04  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimppreviewarea.[ch]: pass a GdkEventButton to
+	gimp_preview_area_menu_popup().
+
+	* libgimpwidgets/gimppreview.c: implement GtkWidget::popup_menu().
+
 2004-09-04  DindinX  <david@dindinx.org>
 
 	* libgimpwidgets/gimppreview.c: Changed the way we attach the preview
