2004-09-04  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/tmpl/gimppreviewarea.sgml: added
	gimp_preview_area_menu_popup().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14622 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-04  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimppreviewarea.sgml: added
+	gimp_preview_area_menu_popup().
+
 2004-09-03  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt: added gimp_check_size() and
