--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-04  Michael Schumacher <schumaml@cvs.gnome.org>
+
+	* libgimp/gimp.def
+	* libgimpbase/gimpbase.def: libgimpwidgets/gimpwidgets.def: added
+	the check(erboard) related entries  
+
 2004-09-04  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimppreviewarea.[ch]: pass a GdkEventButton to
