--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-04  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/noisify.c: ported to GimpDrawablePreview.
+
 2004-09-04  Michael Schumacher <schumaml@cvs.gnome.org>
 
 	* libgimp/gimp.def
