NEWS: Updated for "Fit Canvas to Layers"
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14629 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/NEWS
+++ b/NEWS
@@ -56,6 +56,8 @@ Overview of Changes in GIMP 2.1.4
 
 - Image comment, if any, is now shown within the info window.
 
+- New function "Fit Canvas to Layers" (gimp_image_resize_to_layers)
+
 
 Contributors:
 
