2004-09-05  Sven Neumann  <sven@gimp.org>
	* POTFILES.in: added libgimpwidgets/gimppreviewarea.c.

	* de.po: updated german translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14630 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-05  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added libgimpwidgets/gimppreviewarea.c.
+
+	* de.po: updated german translation.
+
 2004-09-02  Sven Neumann  <sven@gimp.org>
 
 	* de.po: updated german translation.
