2004-09-05  Simon Budig  <simon@gimp.org>
	* tools/pdbgen/pdb/image.pdb: improved documentation for
	gimp_image_resize_to_layers

	* libgimp/gimp.def
	* devel-docs/libgimp/libgimp-sections.txt: added
	gimp_image_resize_to_layers

	* app/pdb/image_cmds.c
	* libgimp/gimpimage_pdb.c: regenerated


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14631 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2004-09-05  Simon Budig  <simon@gimp.org>
 
+	* tools/pdbgen/pdb/image.pdb: improved documentation for
+	gimp_image_resize_to_layers
+
+	* libgimp/gimp.def
+	* devel-docs/libgimp/libgimp-sections.txt: added
+	gimp_image_resize_to_layers
+
+	* app/pdb/image_cmds.c
+	* libgimp/gimpimage_pdb.c: regenerated
+
+2004-09-05  Simon Budig  <simon@gimp.org>
+
 	* app/core/gimpimage-resize.[ch]: Implement function to resize
 	the image to contain all layers completely. Untabified.
 
