2004-09-05  Sven Neumann  <sven@gimp.org>
	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpimage.sgml: added gimp_image_resize_to_layers().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14632 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,9 +3,7 @@
 	* tools/pdbgen/pdb/image.pdb: improved documentation for
 	gimp_image_resize_to_layers
 
-	* libgimp/gimp.def
-	* devel-docs/libgimp/libgimp-sections.txt: added
-	gimp_image_resize_to_layers
+	* libgimp/gimp.def: added gimp_image_resize_to_layers
 
 	* app/pdb/image_cmds.c
 	* libgimp/gimpimage_pdb.c: regenerated
