Reverted my change. It was bogus since Noisify is actually Scatter RGB.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14633 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/NEWS
+++ b/NEWS
@@ -40,8 +40,8 @@ Overview of Changes in GIMP 2.1.4
 
 - Added GimpDrawablePreview derived from GimpPreview.
 
-- Improved previews in Unsharp Mask, Scatter RGB, Sharpen, Spread, Grid
-  and Noisify plug-ins.
+- Improved previews in Unsharp Mask, Scatter RGB, Sharpen, Spread and
+  Grid plug-ins.
 
 - Added previews to Edge, Gaussian Blur, Neon, Soft Glow, Sobel and
   Selective Gaussian Blur.
