2004-09-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/convmatrix.c
	* plug-ins/common/smooth_palette.c
	* plug-ins/flame/flame.c: renamed functions from doit() to
	something less silly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14636 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-09-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/convmatrix.c
+	* plug-ins/common/smooth_palette.c
+	* plug-ins/flame/flame.c: renamed functions from doit() to
+	something less silly.
+
+2004-09-05  Sven Neumann  <sven@gimp.org>
+
 	* Made 2.1.4 release.
 
 2004-09-05  Simon Budig  <simon@gimp.org>
