--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-05  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/common/autocrop.c: fix handling of layers with an
+	offset. Resize the image before cropping when the covered area
+	of a layer is partially outside the image area. Make math more
+	comprehensible.
+
 2004-09-05  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/convmatrix.c
