* plug-ins/common/cartoon.c: Added a preview.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14638 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-05  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/cartoon.c: Added a preview.
+
 2004-09-05  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/common/autocrop.c: fix handling of layers with an
