--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-05  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/cartoon.c: use gimp_preview_invalidate() where
+	appropriate.
+
+	* plug-ins/common/photocopy.c: Added a preview.
+
 2004-09-05  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: bumped version number to 2.1.5.
