--- a/po/it.po
+++ b/po/it.po
@@ -23,7 +23,7 @@ msgstr ""
 "Project-Id-Version: gimp 2.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-09-05 23:46+0200\n"
-"PO-Revision-Date: 2004-09-05 23:55+0200\n"
+"PO-Revision-Date: 2004-09-06 01:01+0200\n"
 "Last-Translator: Marco Ciampa <ciampix@libero.it>\n"
 "Language-Team: gimp@erlug.linux.it\n"
 "MIME-Version: 1.0\n"
@@ -52,10 +52,7 @@ msgid ""
 "Unable to open a test swap file. To avoid data loss please check the "
 "location and permissions of the swap directory defined in your Preferences "
 "(currently \"%s\")."
-msgstr ""
-"Impossibile aprire un file di scambio di prova. Per evitare di perdere dati "
-"controllare la locazione ed i permessi della cartella di scambio nelle "
-"preferenze (attualmente è \"%s\")."
+msgstr "Impossibile aprire un file di scambio di prova. Per evitare di perdere dati controllare la posizione ed i permessi della cartella di scambio nelle preferenze (attualmente è \"%s\")."
 
 #: app/app_procs.c:345 app/core/gimppalette-import.c:395
 #, c-format
@@ -1163,7 +1160,7 @@ msgstr "_Apri..."
 
 #: app/actions/file-actions.c:80
 msgid "_Open Location..."
-msgstr "Apri l_ocazione... "
+msgstr "Apri p_osizione... "
 
 #: app/actions/file-actions.c:85
 msgid "_Save"
@@ -2943,12 +2940,7 @@ msgid ""
 "swap file. Some parts of your images may be corrupted. Try to save your work "
 "using different filenames, restart the Gimp and check the location of the "
 "swap directory in your Preferences."
-msgstr ""
-"Impossibile aprire il file di scambio. Gimp ha terminato la memoria "
-"disponibile e non può usare il file di scambio. Alcune parti dell'immagine "
-"potrebbero essere rovinate. Provate a salvare il vostro lavoro usando un "
-"nome differente, quindi riavviate Gimp e controllate la locazione del file "
-"di scambio nelle preferenze."
+msgstr "Impossibile aprire il file di scambio. Gimp ha terminato la memoria disponibile e non può usare il file di scambio. Alcune parti dell'immagine potrebbero essere rovinate. Provate a salvare il vostro lavoro usando un nome differente, quindi riavviate Gimp e controllate la posizione del file di scambio nelle preferenze."
 
 #: app/config/gimpconfig-deserialize.c:204 app/config/gimpconfig.c:424
 #: app/config/gimpconfig.c:437 app/config/gimpscanner.c:417
@@ -3449,14 +3441,7 @@ msgid ""
 "GIMP is used with large images. Also, things can get horribly slow if the "
 "swap file is created on a directory that is mounted over NFS.  For these "
 "reasons, it may be desirable to put your swap file in \"/tmp\"."
-msgstr ""
-"Imposta la locazione del file di scambio. Gimp usa uno schema di allocazione "
-"\"tile based\". Il file di scambio viene usato per spostare facilmente e "
-"velocemente le 'tile' da e verso il disco. Attenzione al fatto che il file "
-"di scambio di GIMP può allargarsi molto se si elaborano immagini molto "
-"grandi. Inoltre le elaborazioni possono diventare terribilmente lente se il "
-"file di scambio viene creato in una cartella montata su NFS. Per queste "
-"ragioni è preferibile mettere il file di scambio in \"/tmp\"."
+msgstr "Imposta la posizione del file di scambio. Gimp usa uno schema di allocazione \"tile based\". Il file di scambio viene usato per spostare facilmente e velocemente le 'tile' da e verso il disco. Attenzione al fatto che il file di scambio di GIMP può allargarsi molto se si elaborano immagini molto grandi. Inoltre le elaborazioni possono diventare terribilmente lente se il file di scambio viene creato in una cartella montata su NFS. Per queste ragioni è preferibile mettere il file di scambio in \"/tmp\"."
 
 #: app/config/gimprc-blurbs.h:329
 msgid "When enabled, menus can be torn off."
@@ -5612,11 +5597,11 @@ msgstr "Apri immagine"
 
 #: app/gui/file-open-location-dialog.c:73
 msgid "Open Location"
-msgstr "Apri locazione"
+msgstr "Apri indirizzo"
 
 #: app/gui/file-open-location-dialog.c:106
 msgid "Enter location (URI):"
-msgstr "Inserisci locazione (URI):"
+msgstr "Inserisci indirizzo (URI):"
 
 #: app/gui/file-save-dialog.c:98 app/gui/file-save-dialog.c:144
 msgid "Save Image"
