--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+	
 2004-09-05  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added libgimpwidgets/gimppreviewarea.c.
