--- a/po-libgimp/it.po
+++ b/po-libgimp/it.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp 1.1.16\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-09-05 02:40+0200\n"
-"PO-Revision-Date: 2004-08-10 10:27+0200\n"
+"POT-Creation-Date: 2004-09-06 01:14+0200\n"
+"PO-Revision-Date: 2004-09-06 01:14+0200\n"
 "Last-Translator: Marco Ciampa <ciampix@libero.it>\n"
 "Language-Team: gimp.linux.it\n"
 "MIME-Version: 1.0\n"
@@ -208,40 +208,39 @@ msgstr "percento"
 
 #: libgimpbase/gimpbaseenums.c:15
 msgid "Small"
-msgstr ""
+msgstr "Piccolo"
 
 #: libgimpbase/gimpbaseenums.c:16
 msgid "Medium"
-msgstr ""
+msgstr "Medio"
 
 #: libgimpbase/gimpbaseenums.c:17
 msgid "Large"
-msgstr ""
+msgstr "Grande"
 
 #: libgimpbase/gimpbaseenums.c:37
 msgid "Light Checks"
-msgstr ""
+msgstr "Controlli luci"
 
 #: libgimpbase/gimpbaseenums.c:38
 msgid "Mid-Tone Checks"
-msgstr ""
+msgstr "Controlli mezzi toni"
 
 #: libgimpbase/gimpbaseenums.c:39
 msgid "Dark Checks"
-msgstr ""
+msgstr "Controlli ombre"
 
 #: libgimpbase/gimpbaseenums.c:40
 msgid "White Only"
-msgstr ""
+msgstr "Solo bianco"
 
 #: libgimpbase/gimpbaseenums.c:41
 msgid "Gray Only"
-msgstr ""
+msgstr "Solo grigio"
 
 #: libgimpbase/gimpbaseenums.c:42
-#, fuzzy
 msgid "Black Only"
-msgstr "Nero"
+msgstr "Solo nero"
 
 #: libgimpbase/gimpbaseenums.c:62
 msgid "RGB color"
@@ -498,20 +497,20 @@ msgstr ""
 
 #: libgimpwidgets/gimppreviewarea.c:114
 msgid "Check Size"
-msgstr ""
+msgstr "Controllo ampiezza"
 
 #: libgimpwidgets/gimppreviewarea.c:121
 msgid "Check Style"
-msgstr ""
+msgstr "Controllo stile"
 
 #. a toggle button to (des)activate the instant preview
 #: libgimpwidgets/gimppreview.c:246
 msgid "_Preview"
-msgstr ""
+msgstr "Ante_prima"
 
 #: libgimpwidgets/gimpstock.c:113
 msgid "Anchor"
-msgstr "Ancora"
+msgstr "Àncora"
 
 #: libgimpwidgets/gimpstock.c:114
 msgid "_Duplicate"
@@ -571,7 +570,7 @@ msgstr "_Ruota"
 
 #: libgimpwidgets/gimpstock.c:289
 msgid "_Shear"
-msgstr "_Cesoie"
+msgstr "_Inclina"
 
 #: libgimpwidgets/gimpunitmenu.c:302
 msgid "More..."
@@ -735,13 +734,12 @@ msgid "Black"
 msgstr "Nero"
 
 #: modules/colorsel_cmyk.c:191
-#, fuzzy
 msgid "Black _Pullout:"
-msgstr "Estrazione nero (%)"
+msgstr "Estra_zione nero:"
 
 #: modules/colorsel_cmyk.c:208
 msgid "The percentage of black to pull out of the colored inks."
-msgstr ""
+msgstr "La percentuale di estrazione nero dagli inchiostri colorati."
 
 #: modules/colorsel_triangle.c:104
 msgid "Painter-style triangle color selector"
