--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+
 2004-08-13  Tommi Vainikainen  <thv@iki.fi>
 
 	* fi.po: Unified some fields in po headers for Finnish team.
