2004-09-06  Simon Budig  <simon@gimp.org>
	* app/tools/gimpcroptool.c: reordered info_dialog_hide() and
	crop_tool_crop_image(), which avoids the repeated popping up
	of the info dialog and avoids a crash.

	Fixes bug #151712


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14646 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-09-06  Simon Budig  <simon@gimp.org>
+
+	* app/tools/gimpcroptool.c: reordered info_dialog_hide() and
+	crop_tool_crop_image(), which avoids the repeated popping up
+	of the info dialog and avoids a crash.
+
+	Fixes bug #151712
+
 2004-09-05  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/cartoon.c: use gimp_preview_invalidate() where
