--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  Marco Ciampa <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+
 2004-08-31  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added script-fu-interface.c.
