--- a/po-libgimp/en_CA.po
+++ b/po-libgimp/en_CA.po
@@ -1,6 +1,6 @@
 # Canadian English translation for libgimp
 # Copyright (C) 2004 Adam Weinberger and the GNOME Foundation
-# This file is distributed under the same license as the libgimp package.
+# This file is distributed under the same licence as the libgimp package.
 # Maintainer: Adam Weinberger <adamw@FreeBSD.org>
 # 
 # 
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libgimp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-09-05 02:40+0200\n"
-"PO-Revision-Date: 2004-04-22 20:02-0400\n"
+"POT-Creation-Date: 2004-09-06 00:55-0400\n"
+"PO-Revision-Date: 2004-09-06 20:02-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: English/Canada <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
@@ -153,7 +153,6 @@ msgstr "_Ignore"
 msgid "_Export"
 msgstr "_Export"
 
-#. the headline
 #: libgimp/gimpexport.c:485
 #, c-format
 msgid ""
@@ -207,73 +206,71 @@ msgstr "percent"
 
 #: libgimpbase/gimpbaseenums.c:15
 msgid "Small"
-msgstr ""
+msgstr "Small"
 
 #: libgimpbase/gimpbaseenums.c:16
 msgid "Medium"
-msgstr ""
+msgstr "Medium"
 
 #: libgimpbase/gimpbaseenums.c:17
 msgid "Large"
-msgstr ""
+msgstr "Large"
 
 #: libgimpbase/gimpbaseenums.c:37
 msgid "Light Checks"
-msgstr ""
+msgstr "Light Checks"
 
 #: libgimpbase/gimpbaseenums.c:38
 msgid "Mid-Tone Checks"
-msgstr ""
+msgstr "Mid-Tone Checks"
 
 #: libgimpbase/gimpbaseenums.c:39
 msgid "Dark Checks"
-msgstr ""
+msgstr "Dark Checks"
 
 #: libgimpbase/gimpbaseenums.c:40
 msgid "White Only"
-msgstr ""
+msgstr "White Only"
 
 #: libgimpbase/gimpbaseenums.c:41
 msgid "Gray Only"
-msgstr ""
+msgstr "Gray Only"
 
 #: libgimpbase/gimpbaseenums.c:42
-#, fuzzy
 msgid "Black Only"
-msgstr "Black"
+msgstr "Black Only"
 
 #: libgimpbase/gimpbaseenums.c:62
 msgid "RGB color"
-msgstr ""
+msgstr "RGB colour"
 
 #: libgimpbase/gimpbaseenums.c:63 libgimpbase/gimpbaseenums.c:86
-#, fuzzy
 msgid "Grayscale"
-msgstr "Convert to Grayscale"
+msgstr "Grayscale"
 
 #: libgimpbase/gimpbaseenums.c:64
 msgid "Indexed color"
-msgstr ""
+msgstr "Indexed colour"
 
 #: libgimpbase/gimpbaseenums.c:84
 msgid "RGB"
-msgstr ""
+msgstr "RGB"
 
 #: libgimpbase/gimpbaseenums.c:85
 msgid "RGB-alpha"
-msgstr ""
+msgstr "RGB-alpha"
 
 #: libgimpbase/gimpbaseenums.c:87
 msgid "Grayscale-alpha"
-msgstr ""
+msgstr "Grayscale-alpha"
 
 #: libgimpbase/gimpbaseenums.c:88
 msgid "Indexed"
-msgstr ""
+msgstr "Indexed"
 
 #: libgimpbase/gimpbaseenums.c:89
 msgid "Indexed-alpha"
-msgstr ""
+msgstr "Indexed-alpha"
 
 #: libgimpbase/gimpmemsize.c:177
 #, c-format
@@ -445,13 +442,12 @@ msgid "Alpha"
 msgstr "Alpha"
 
 #: libgimpwidgets/gimpcolorscales.c:243
-#, fuzzy
 msgid "Hexadecimal color notation as used in HTML and CSS"
-msgstr "Hexadecimal colour notation as used in HTML"
+msgstr "Hexadecimal colour notation as used in HTML and CSS"
 
 #: libgimpwidgets/gimpcolorscales.c:248
 msgid "HTML _Notation:"
-msgstr ""
+msgstr "HTML _Notation:"
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
@@ -499,16 +495,16 @@ msgstr ""
 
 #: libgimpwidgets/gimppreviewarea.c:114
 msgid "Check Size"
-msgstr ""
+msgstr "Check Size"
 
 #: libgimpwidgets/gimppreviewarea.c:121
 msgid "Check Style"
-msgstr ""
+msgstr "Check Style"
 
 #. a toggle button to (des)activate the instant preview
 #: libgimpwidgets/gimppreview.c:246
 msgid "_Preview"
-msgstr ""
+msgstr "_Preview"
 
 #: libgimpwidgets/gimpstock.c:113
 msgid "Anchor"
@@ -735,13 +731,12 @@ msgid "Black"
 msgstr "Black"
 
 #: modules/colorsel_cmyk.c:191
-#, fuzzy
 msgid "Black _Pullout:"
-msgstr "Black Pullout (%):"
+msgstr "Black _Pullout:"
 
 #: modules/colorsel_cmyk.c:208
 msgid "The percentage of black to pull out of the colored inks."
-msgstr ""
+msgstr "The percentage of black to pull out of the coloured inks."
 
 #: modules/colorsel_triangle.c:104
 msgid "Painter-style triangle color selector"
@@ -762,6 +757,3 @@ msgstr "Watercolour"
 #: modules/colorsel_water.c:220
 msgid "Pressure"
 msgstr "Pressure"
-
-#~ msgid "He_x Triplet:"
-#~ msgstr "He_x Triplet:"
