* en_CA.po: Updated Canadian English translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14652 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-08-26  Sven Neumann  <sven@gimp.org>
 
 	* fortunes.xsl: fixed Wiki syntax in output.
