--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-09-06  Marco Ciampa <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
