--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/struc.c: added a preview.
+
 2004-09-06  Simon Budig  <simon@gimp.org>
 
 	* app/tools/gimpcroptool.c: reordered info_dialog_hide() and
