--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-07  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_uri):
+	simplified the code that selects an image file by its URI.
+
 2004-09-07  Simon Budig  <simon@gimp.org>
 
 	* app/widgets/gimpviewrendererbrush.c: Added an indicator for
