2004-09-07  Michael Natterer  <mitch@gimp.org>
	* plug-ins/common/xwd.c (query): applied patch from Alan Horkan
	which improves the blurb and help texts. Fixes bug #151912.

	Unrelated: did coding style / indentation cleanup in the whole file.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14656 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-09-07  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/common/xwd.c (query): applied patch from Alan Horkan
+	which improves the blurb and help texts. Fixes bug #151912.
+
+	Unrelated: did coding style / indentation cleanup in the whole file.
+
+2004-09-07  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_uri):
 	simplified the code that selects an image file by its URI.
 
