2004-09-07  Michael Natterer  <mitch@gimp.org>
	* plug-ins/common/edge.c: indentation and whitespace cleanup.

	* plug-ins/common/struc.c: minor coding style issues.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14657 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-09-07  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/common/edge.c: indentation and whitespace cleanup.
+
+	* plug-ins/common/struc.c: minor coding style issues.
+
+2004-09-07  Michael Natterer  <mitch@gimp.org>
+
 	* plug-ins/common/xwd.c (query): applied patch from Alan Horkan
 	which improves the blurb and help texts. Fixes bug #151912.
 
