2004-09-07  Michael Natterer  <mitch@gimp.org>
	* app/gui/dialogs.c (toplevel_entries): added a foreign entry
	"gimp-file-open-loaction-dialog".

	* app/gui/file-open-location-dialog.c: register the dialog
	with the toplevel dialog factory so it remembers its position.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14659 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-09-07  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/dialogs.c (toplevel_entries): added a foreign entry
+	"gimp-file-open-loaction-dialog".
+
+	* app/gui/file-open-location-dialog.c: register the dialog
+	with the toplevel dialog factory so it remembers its position.
+
+2004-09-07  Michael Natterer  <mitch@gimp.org>
+
 	* app/actions/context-actions.c
 	* app/actions/context-commands.[ch]: applied a heavily modified
 	patch from David Gowers which adds actions to modify the context's
