* libgimpwidgets/test-preview-area.c: added some tests for   gimp_preview_area_blend() and gimp_preview_area_mask().
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14662 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-07  DindinX  <david@dindinx.org>
 
+	* libgimpwidgets/test-preview-area.c: added some tests for
+	gimp_preview_area_blend() and gimp_preview_area_mask().
+
+2004-09-07  DindinX  <david@dindinx.org>
+
 	* libgimpwidgets/gimppreviewarea.c
 	* libgimpwidgets/gimppreviewarea.h: added two functions:
 	gimp_preview_area_blend() to draw the blending of two buffers with
