2004-09-07  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw): some
	code cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14663 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-07  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw): some
+	code cleanup.
+
 2004-09-07  DindinX  <david@dindinx.org>
 
 	* libgimpwidgets/test-preview-area.c: added some tests for
