2004-09-07  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/test-preview-area.c: fit output into 80 columns.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14664 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-09-07  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/test-preview-area.c: fit output into 80 columns.
+
 	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw): some
 	code cleanup.
 
