2004-09-07  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpwidgets.def: added new entries.

2004-09-07  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-sections.txt
	* devel-docs/libgimpwidgets/tmpl/gimppreviewarea.sgml: added new
	GimpPreviewArea functions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14665 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-07  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* devel-docs/libgimpwidgets/tmpl/gimppreviewarea.sgml: added new
+	GimpPreviewArea functions.
+
 2004-09-05  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/libgimp-sections.txt
