*  libgimpwidgets/gimppreviewarea.c: (gimp_preview_area_blend)   use gimp_preview_area_draw when the opacity is 0 or 255, instead of   duplicating code.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14666 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-08  DindinX  <david@dindinx.org>
+
+	*  libgimpwidgets/gimppreviewarea.c: (gimp_preview_area_blend)
+	use gimp_preview_area_draw when the opacity is 0 or 255, instead of
+	duplicating code.
+
 2004-09-07  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpwidgets.def: added new entries.
