2004-09-08  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreviewarea.c: factored out common code.
	Reduced indentation level by closing a switch earlier.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14667 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
+2004-09-08  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimppreviewarea.c: factored out common code.
+	Reduced indentation level by closing a switch earlier.
+
 2004-09-08  DindinX  <david@dindinx.org>
 
-	*  libgimpwidgets/gimppreviewarea.c: (gimp_preview_area_blend)
+	* libgimpwidgets/gimppreviewarea.c: (gimp_preview_area_blend)
 	use gimp_preview_area_draw when the opacity is 0 or 255, instead of
 	duplicating code.
 
