2004-09-08  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_fill):
	optimized solid color fills.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14668 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-08  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_fill):
+	optimized solid color fills.
+
+2004-09-08  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimppreviewarea.c: factored out common code.
 	Reduced indentation level by closing a switch earlier.
 
