* libgimpwidgets/gimppreviewarea.c: fixed a stupid typo.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14669 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-08  DindinX  <david@dindinx.org>
+
+	* libgimpwidgets/gimppreviewarea.c: fixed a stupid typo.
+
 2004-09-08  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_fill):
