--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-09-09  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpdialogfactory.c
+	(gimp_dialog_factory_dialog_new_internal): renamed parameter
+	"gboolean raise_if_found" to "return_existing" and added
+	additional parameter "gboolean present".
+
+	(gimp_dialog_factory_dialog_new)
+	(gimp_dialog_factory_dialog_raise)
+	(gimp_dialog_factory_dockable_new): pass both parameters (passing
+	"present" as "raise_if_found" was not quite correct).
+
 2004-09-08  DindinX  <david@dindinx.org>
 
 	* libgimpwidgets/gimppreviewarea.c: fixed a stupid typo.
